Attempt heroku build fix

--- a/clients/web/src/app/shared/layouts/main-layout/main-layout.component.html
+++ b/clients/web/src/app/shared/layouts/main-layout/main-layout.component.html
@@ -1,2 +1,9 @@
-Main Layout
+<p>Main Layout</p>
+<p>
+  <a [routerLink]="[ '/connect/company']">Connect -> Company</a>
+
+</p>
+<p>
+  <a [routerLink]="[ '/connect/intern']">Connect -> Intern</a>
+</p>
 <router-outlet></router-outlet>
