Add links to new pages

--- a/clients/web/src/app/shared/layouts/connect-layout/company-connect-layout/company-connect-layout.component.html
+++ b/clients/web/src/app/shared/layouts/connect-layout/company-connect-layout/company-connect-layout.component.html
@@ -1,2 +1,9 @@
 <p>Company Connect Layout</p>
+
+<p>
+  <a [routerLink]="[ './signup']">Connect -> Company -> signup</a>
+</p>
+<p>
+  <a [routerLink]="[ '/login']">Connect -> Company -> login</a>
+</p>
 <router-outlet></router-outlet>
