--- a/clients/web/src/app/shared/layouts/connect-layout/connect-layout.component.html
+++ b/clients/web/src/app/shared/layouts/connect-layout/connect-layout.component.html
@@ -1,2 +1,12 @@
 <p>Connect Layout</p>
+
+<p>
+  <a [routerLink]="[ '/connect/company']">Connect -> Company</a>
+</p>
+<p>
+  <a [routerLink]="[ '/connect/intern']">Connect -> Intern</a>
+</p>
+
 <router-outlet></router-outlet>
+
+<button (click)="login()">Login</button>
