--- a/clients/web/src/app/shared/layouts/connect-layout/intern-connect-layout/intern-connect-layout.component.html
+++ b/clients/web/src/app/shared/layouts/connect-layout/intern-connect-layout/intern-connect-layout.component.html
@@ -1,2 +1,6 @@
 <p>Intern Connect Layout</p>
+
+<p>
+  <a [routerLink]="[ './login']">Connect -> Intern -> Login</a>
+</p>
 <router-outlet></router-outlet>
