--- a/clients/web/src/app/shared/layouts/main-layout/main-layout.component.html
+++ b/clients/web/src/app/shared/layouts/main-layout/main-layout.component.html
@@ -1,9 +1,5 @@
+<img src="/assets/images/ip-logo.png" alt="" style="max-width: 200px;">
+<h3>Intern Portal</h3>
+<button (click)="logout()">logout</button>
 <p>Main Layout</p>
-<p>
-  <a [routerLink]="[ '/connect/company']">Connect -> Company</a>
-
-</p>
-<p>
-  <a [routerLink]="[ '/connect/intern']">Connect -> Intern</a>
-</p>
 <router-outlet></router-outlet>
