Fix typo in navbar

--- a/clients/web/src/app/shared/components/navbars/connect-navbar/connect-navbar.component.html
+++ b/clients/web/src/app/shared/components/navbars/connect-navbar/connect-navbar.component.html
@@ -2,7 +2,7 @@
   <a class="logo" [routerLink]="['/connect']">
     <div class="d-flex align-items-center">
       <img class="mr-2" id="logo" src="/assets/images/ip-logo.png" alt="">
-      <h3 class="hint">Inter Portal</h3>
+      <h3 class="hint">Intern Portal</h3>
     </div>
   </a>
 </div>
