Add navbar for admin,manager,intern

--- a/clients/web/src/app/shared/layouts/connect-layout/intern-connect-layout/intern-connect-layout.component.html
+++ b/clients/web/src/app/shared/layouts/connect-layout/intern-connect-layout/intern-connect-layout.component.html
@@ -1,4 +1,10 @@
-<app-connect-navbar></app-connect-navbar>
-<p>Intern Connect Layout</p>
-
-<router-outlet></router-outlet>
+<div class="row no-gutters" style="height: 100vh;">
+  <div class="theme-light main-bg col-md-24 d-flex">
+    <div class="d-flex align-items-center justify-content-center" style="width: 100%;">
+      <div style="max-width: 400px; width: 100%;">
+        <h3 class="mb-4 hint">Intern Connect</h3>
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
