--- a/clients/web/src/app/shared/layouts/main-layout/main-layout.component.html
+++ b/clients/web/src/app/shared/layouts/main-layout/main-layout.component.html
@@ -1,6 +1,2 @@
-<img src="/assets/images/ip-logo.png" alt="" style="max-width: 200px;">
-<h3>Intern Portal</h3>
-<pre>{{ selfService.user | json }}</pre>
-<button (click)="logout()">logout</button>
-<p>Main Layout</p>
+<app-main-navbar></app-main-navbar>
 <router-outlet></router-outlet>
