--- a/clients/web/src/app/shared/components/connect/company/company-login/company-login.component.html
+++ b/clients/web/src/app/shared/components/connect/company/company-login/company-login.component.html
@@ -1,6 +1,6 @@
 <form (ngSubmit)="login()" [formGroup]="loginForm">
   <div class="mb-4">
-    <label class="mb-2" for="email">Email or Username</label>
+    <label class="mb-2" for="email">Email</label>
     <input type="text" name="email" formControlName="email" class="input input-lg mb-2 show-errors">
 
     <label class="mb-2" for="password">Password</label>
