--- a/clients/web/src/app/shared/components/connect/intern/intern-login/intern-login.component.html
+++ b/clients/web/src/app/shared/components/connect/intern/intern-login/intern-login.component.html
@@ -1,1 +1,19 @@
-<p>Inter login</p>
+<form (ngSubmit)="login()" [formGroup]="loginForm">
+  <div class="mb-4">
+    <label class="mb-2" for="email">Email</label>
+    <input type="text" name="email" formControlName="email" class="input input-lg mb-2 show-errors">
+
+    <label class="mb-2" for="password">Password</label>
+    <input type="password" name="password" formControlName="password" class="input input-lg mb-2 show-errors">
+
+    <!-- <a class="primary" [routerLink]="['/connect/company/signup']">Don't have an account? Sign up</a> -->
+
+    <div class="mt-3">
+      <app-main-error-alert [errors]="errors"></app-main-error-alert>
+    </div>
+  </div>
+
+  <button class="btn btn-lg btn-primary" [disabled]="isSubmitting">
+    Log in
+  </button>
+</form>
