--- a/clients/web/src/app/shared/components/navbars/connect-navbar/connect-navbar.component.html
+++ b/clients/web/src/app/shared/components/navbars/connect-navbar/connect-navbar.component.html
@@ -1,8 +1,10 @@
-<div class="p-2">
-  <a class="logo" [routerLink]="['/connect']">
-    <div class="d-flex align-items-center">
-      <img class="mr-2" id="logo" src="/assets/images/ip-logo.png" alt="">
-      <h3 class="hint">Intern Portal</h3>
-    </div>
-  </a>
+<div class="my-navbar sticky-top">
+  <nav class="navbar navbar-expand-lg">
+    <a class="logo mr-4" [routerLink]="['']">
+      <div class="d-flex align-items-center">
+        <img class="mr-2" id="logo" src="/assets/images/ip-logo.png" alt="">
+        <h3 class="hint">Intern Portal</h3>
+      </div>
+    </a>
+  </nav>
 </div>
