--- a/clients/web/src/design/scss/form.scss
+++ b/clients/web/src/design/scss/form.scss
@@ -32,7 +32,7 @@ label {
 
   &:focus {
     background: var(--input-background-hover);
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--secondary-color);
   }
 
   &:disabled {
@@ -45,7 +45,7 @@ label {
 .input.show-errors,
 .select.show-errors {
   &.ng-touched.ng-invalid {
-    border: 1px solid map-get($colors, "red");
+    border: 1px solid var(--danger-color);
   }
 
   &.ng-valid.ng-touched {
