--- a/clients/web/src/app/shared/components/navbar-menus/navbar-account-menu/navbar-account-menu.component.html
+++ b/clients/web/src/app/shared/components/navbar-menus/navbar-account-menu/navbar-account-menu.component.html
@@ -3,7 +3,7 @@
   Account
 </a>
 <div class="dropdown-menu dropdown-menu-right" style="width: 248px;">
-  <li class="dropdown-item dropdown-item-account disabled">
+  <li class="dropdown-item dropdown-item-account disabled dropdown-divider">
     {{ selfService.fullName() }}
     <h4 class="ml-2"><span class="badge primary-bg text-white">{{ selfService.userType }}</span></h4>
   </li>
