--- a/clients/web/src/app/shared/components/navbars/main-navbar/main-navbar.component.html
+++ b/clients/web/src/app/shared/components/navbars/main-navbar/main-navbar.component.html
@@ -5,7 +5,7 @@
     </a>
     <div class="nav-container">
       <ul class="nav-items">
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="selfService.user.setupCompleted">
           <a class="nav-link" [routerLink]="['']">Dashboard</a>
         </li>
         <li class="nav-item">
