--- a/clients/web/src/design/scss/theme.scss
+++ b/clients/web/src/design/scss/theme.scss
@@ -9,7 +9,7 @@ $content-width: 1054px;
   --background: white;
   --button-text-color: white;
   --text-color: #342E37;
-  --input-background: #f0efef;
+  --input-background: #f7f7f7;
   --input-border: #AEC3B0;
   --input-placeholder: #AEC3B0;
   --input-background-hover: var(--background);
