--- a/clients/web/src/app/shared/components/connect/company/company-signup/company-signup.component.html
+++ b/clients/web/src/app/shared/components/connect/company/company-signup/company-signup.component.html
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-lg-12">
         <label class="mb-2" for="first-name">First name</label>
-        <input type="text" name="first-name" formControlName="firstName" class="input input-lg mb-2 show-errors">
+        <input autofocus type="text" name="first-name" formControlName="firstName"
+          class="input input-lg mb-2 show-errors">
       </div>
 
       <div class="col-lg-12">
