--- a/clients/web/src/design/styles.scss
+++ b/clients/web/src/design/styles.scss
@@ -11,6 +11,7 @@ $list-group-border-color: var(--border-color);
 $list-group-border-radius: 2px;
 $list-group-bg: var(--background);
 $border-color: var(--border-color);
+$table-border-color: var(--border-color);
 // $grid-gutter-width: 12px;
 
 @import "../../node_modules/bootstrap/scss/root";
