--- a/clients/web/src/design/scss/card.scss
+++ b/clients/web/src/design/scss/card.scss
@@ -6,8 +6,9 @@
   word-wrap: break-word;
   border-radius: 2px;
   background-color: var(--background);
+  border: 1px solid var(--border-color);
   background-clip: border-box;
-  box-shadow: var(--box-shadow);
+  // box-shadow: var(--box-shadow);
 
   >hr {
     margin: 0;
@@ -36,7 +37,11 @@
 }
 
 .card-title {
-  margin-bottom: $card-spacer-y;
+  flex: 1 1 auto;
+  padding: $card-spacer-x;
+  color: $card-color;
+  border-bottom: 1px solid var(--border-color);
+  background-color: var(--border-color);
 }
 
 .card-subtitle {
