--- a/clients/web/src/design/scss/navbar.scss
+++ b/clients/web/src/design/scss/navbar.scss
@@ -3,6 +3,7 @@
   // position: sticky;
   transition: all 0.25s ease;
   // height: 64px;
+  border-bottom: 1px solid var(--border-color);
 
   .navbar {
     background-color: var(--background);
