--- a/clients/web/src/app/shared/components/badges/user-type-badge/user-type-badge.component.html
+++ b/clients/web/src/app/shared/components/badges/user-type-badge/user-type-badge.component.html
@@ -12,7 +12,7 @@
   </span>
 </h3>
 
-<h4 *ngIf="size == 'sm'">
+<h4 *ngIf="!size || size == 'sm'">
   <span class="badge text-white"
     [ngClass]="{ 'admin-bg': userType == UserType.Admin, 'manager-bg': userType == UserType.Manager, 'intern-bg': userType == UserType.Intern }">
     {{ userType }}
