--- a/clients/web/src/app/shared/components/navbars/connect-navbar/connect-navbar.component.html
+++ b/clients/web/src/app/shared/components/navbars/connect-navbar/connect-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="my-navbar sticky-top">
+<div class="my-navbar fixed-top">
   <nav class="navbar navbar-expand-lg">
     <a class="logo mr-4" [routerLink]="['']">
       <div class="d-flex align-items-center">
