--- a/clients/web/src/app/shared/components/navbars/main-navbar/main-navbar.component.html
+++ b/clients/web/src/app/shared/components/navbars/main-navbar/main-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="my-navbar sticky-top">
+<div class="my-navbar fixed-top">
   <nav class="navbar navbar-expand-lg">
     <a class="logo mr-4" [routerLink]="['']">
       <img class="mr-2" id="logo" src="/assets/images/ip-logo.png" alt="">
