--- a/clients/web/src/design/scss/theme.scss
+++ b/clients/web/src/design/scss/theme.scss
@@ -22,6 +22,9 @@ $content-width: 1054px;
   --danger-color: #d14128;
   --border-color: #f3f3f3;
   --background-hover: #f3f3f3;
+  --gray-1: #fafafa;
+  --gray-2: #f3f3f3;
+  --gray-3: #e9e9e9;
   --hint-color: #8c8c8e;
   --box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.01), 0 3px 24px rgba(42, 46, 46, 0.09);
   transition: all 0.25s ease;
@@ -88,6 +91,7 @@ body {
   font-size: var(--font-size);
   letter-spacing: .5px;
   font-weight: 500;
+  padding-top: 64px;
 }
 
 a {
@@ -230,6 +234,30 @@ i {
 
 .admin-bg {
   background-color: var(--admin-color);
+}
+
+.gray-1-color {
+  color: var(--gray-1);
+}
+
+.gray-1-bg {
+  background-color: var(--gray-1);
+}
+
+.gray-2-color {
+  color: var(--gray-2);
+}
+
+.gray-2-bg {
+  background-color: var(--gray-2);
+}
+
+.gray-3-color {
+  color: var(--gray-3);
+}
+
+.gray-3-bg {
+  background-color: var(--gray-3);
 }
 
 footer {
