--- a/clients/web/src/design/styles.scss
+++ b/clients/web/src/design/styles.scss
@@ -8,7 +8,7 @@ $body-bg: var(--background);
 $pre-color: var(--text-color);
 $grid-columns: 24;
 $list-group-border-color: var(--border-color);
-$list-group-border-radius: 2px;
+$list-group-border-radius: 4px;
 $list-group-bg: var(--background);
 $border-color: var(--border-color);
 $table-border-color: var(--border-color);
@@ -60,5 +60,6 @@ $table-border-color: var(--border-color);
 @import './scss/types';
 @import './scss/grid';
 @import './scss/card';
+@import './scss/user-card';
 @import './scss/dialog';
 @import './scss/progress';
