--- a/clients/web/src/design/scss/theme.scss
+++ b/clients/web/src/design/scss/theme.scss
@@ -20,6 +20,7 @@ $content-width: 1054px;
   --intern-color: #326273;
   --success-color: #2bd0ba;
   --danger-color: #d14128;
+  --warning-color: #F7D08A;
   --border-color: #f3f3f3;
   --background-hover: #f3f3f3;
   --gray-1: #fafafa;
@@ -42,6 +43,7 @@ $content-width: 1054px;
   --secondary-color: #71a0b1;
   --success-color: #2bd0ba;
   --danger-color: #d14128;
+  --warning-color: #F7D08A;
   --border-color: #0E0D18;
   --background-hover: #131314;
   --hint-color: #8c8c8e;
@@ -186,6 +188,14 @@ i {
 
 .danger-bg {
   background-color: var(--danger-color);
+}
+
+.warning {
+  color: var(--warning-color);
+}
+
+.warning-bg {
+  background-color: var(--warning-color);
 }
 
 .green {
