--- a/clients/web/src/app/pages/employees-page/employees-add-page/employees-add-page.component.html
+++ b/clients/web/src/app/pages/employees-page/employees-add-page/employees-add-page.component.html
@@ -1,9 +1,9 @@
 <div class="gray-1-bg p-4">
   <div class="py-4 text-center">
     <h1 class="hint mb-3"><i class="fas fa-user-plus"></i></h1>
-    <h3 class="hint">Complete the form to add an Intern to your organization.</h3>
+    <h3 class="hint">Complete the form to add an Employee to your organization.</h3>
   </div>
 </div>
 <div class="p-4">
-  <app-intern-add-form></app-intern-add-form>
+  <app-employee-add-form></app-employee-add-form>
 </div>
