--- a/clients/web/src/app/pages/employees-page/employees-page.component.html
+++ b/clients/web/src/app/pages/employees-page/employees-page.component.html
@@ -6,12 +6,6 @@
     <app-user-small-bar></app-user-small-bar>
   </div>
   <div class="col-lg-18 col-md-16 mh-100" style="overflow-y: scroll;">
-    <div class="gray-1-bg">
-      <app-user-details [user]="selectedEmployee" (updatedUser)="updatedUser($event)"></app-user-details>
-      <app-no-user-selected *ngIf="!selectedEmployee" [title]="'intern'"></app-no-user-selected>
-    </div>
-    <div class="p-4">
-      <pre>{{ selectedEmployee | json}}</pre>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
