--- a/clients/web/src/app/shared/components/users/employee-add-form/employee-add-form.component.html
+++ b/clients/web/src/app/shared/components/users/employee-add-form/employee-add-form.component.html
@@ -1,4 +1,4 @@
-<div class="user-card">
+<div class="form-card">
   <div class="p-4">
     <form (ngSubmit)="onAddUser()" [formGroup]="addEmployeeForm">
       <div class="mb-4">
