--- a/clients/web/src/app/shared/components/users/user-add-side-card/user-add-side-card.component.html
+++ b/clients/web/src/app/shared/components/users/user-add-side-card/user-add-side-card.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="[(userType == UserType.Intern ? '/interns/' : '/employees/') + 'add']" [routerLinkActive]="'active'"
-  class="user-card no-highlight">
+  class="form-card no-highlight">
   <div class="card-body text-center">
     <h3 class="hint">
       <span class="mr-2">
