--- a/clients/web/src/design/styles.scss
+++ b/clients/web/src/design/styles.scss
@@ -60,6 +60,6 @@ $table-border-color: var(--border-color);
 @import './scss/types';
 @import './scss/grid';
 @import './scss/card';
-@import './scss/user-card';
+@import './scss/form-card';
 @import './scss/dialog';
 @import './scss/progress';
