--- a/clients/web/src/app/shared/components/users/intern-add-form/intern-add-form.component.html
+++ b/clients/web/src/app/shared/components/users/intern-add-form/intern-add-form.component.html
@@ -1,4 +1,4 @@
-<div class="user-card">
+<div class="form-card">
   <div class="p-4">
     <form (ngSubmit)="onAddUser()" [formGroup]="addInternForm">
       <div class="mb-4">
@@ -17,7 +17,6 @@
 
         <div class="mt-3">
           <app-main-error-alert [errors]="errors"></app-main-error-alert>
-          <app-main-success-alert [successes]="successes"></app-main-success-alert>
         </div>
       </div>
 
