--- a/clients/web/src/app/shared/components/users/user-side-card/user-side-card.component.html
+++ b/clients/web/src/app/shared/components/users/user-side-card/user-side-card.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="[(user.userType == UserType.Admin || user.userType == UserType.Manager ? '/employees/' : '/interns/') + user._id]"
-  [routerLinkActive]="'active'" class="user-card no-highlight">
+  [routerLinkActive]="'active'" class="form-card no-highlight">
   <div class="card-body">
     <div class="d-flex align-content-center justify-content-between">
       <h3 class="font-weight-bolder">{{ user.firstName }} {{ user.lastName }}</h3>
