--- a/clients/web/src/design/scss/form-card.scss
+++ b/clients/web/src/design/scss/form-card.scss
@@ -1,4 +1,4 @@
-.user-card {
+.form-card {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
   background-clip: border-box;
 }
 
-.user-card.active {
+.form-card.active {
   background-color: var(--background);
   border-color: var(--primary-color);
 }
