Update team side card and add screenshot

--- a/clients/web/src/app/shared/components/teams/team-content/team-content.component.html
+++ b/clients/web/src/app/shared/components/teams/team-content/team-content.component.html
@@ -3,6 +3,6 @@
     <app-team-details-edit [team]="team" (teamUpdatedEmitter)="teamUpdated($event)"></app-team-details-edit>
   </div>
   <div class="col-md-12">
-
+    <app-team-members-edit [team]="team"></app-team-members-edit>
   </div>
 </div>
