--- a/clients/web/src/app/shared/components/teams/team-side-card/team-side-card.component.html
+++ b/clients/web/src/app/shared/components/teams/team-side-card/team-side-card.component.html
@@ -2,6 +2,8 @@
   <div class="card-body">
     <div class="d-flex align-content-center justify-content-between">
       <h3 class="font-weight-bolder">{{ team.name }}</h3>
+      <span></span>
+      <h4><span class="primary-bg badge badge-secondary">{{ team.members.length }}</span></h4>
     </div>
   </div>
 </a>
