--- a/clients/web/src/app/shared/components/users/user-details/user-details-edit/user-details-edit.component.html
+++ b/clients/web/src/app/shared/components/users/user-details/user-details-edit/user-details-edit.component.html
@@ -1,4 +1,4 @@
-<div class="user-card">
+<div class="form-card">
   <div class="p-4">
     <form (ngSubmit)="onUpdateUser()" [formGroup]="updateUserForm">
       <div class="mb-4">
