--- a/clients/web/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/clients/web/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -1,10 +1,35 @@
+<div class="p-4 mb-2 gray-2-bg">
+  <div class="d-flex align-items-center justify-content-between">
+
+  </div>
+</div>
+
 <div class="container-fluid py-4">
-  <div class="row">
+  <div class="row" *ngIf="selfService.isAdminOrManager">
     <div class="col-lg-12 col-md-16 col-24 mb-5 mb-md-none">
-      <app-users-card *ngIf="selfService.isAdminOrManager" [users]="users"></app-users-card>
+      <app-users-card [users]="users"></app-users-card>
     </div>
     <div class="col-lg-12 col-md-16 col-24">
-      <app-teams-card *ngIf="selfService.isAdminOrManager" [teams]="teams"></app-teams-card>
+      <app-teams-card [teams]="teams"></app-teams-card>
+    </div>
+    <div class="col-lg-12 col-md-16 col-24">
+      <app-company-info-simple></app-company-info-simple>
+      <app-welcome-employee></app-welcome-employee>
+    </div>
+  </div>
+
+  <div class="row" *ngIf="selfService.isIntern">
+    <div class="col-5">
+      Hello world!
+    </div>
+    <div class="col-14">
+      Hello world!
+    </div>
+    <div class="col-5">
+      <div class="mb-2">
+        <app-company-info-simple></app-company-info-simple>
+      </div>
+      <app-welcome-intern></app-welcome-intern>
     </div>
   </div>
 </div>
