--- a/clients/web/src/app/shared/components/teams/team-details/team-details-edit/team-details-edit.component.html
+++ b/clients/web/src/app/shared/components/teams/team-details/team-details-edit/team-details-edit.component.html
@@ -5,6 +5,10 @@
         <label class="mb-2" for="team-name">Team name</label>
         <input type="text" name="team-name" formControlName="name" class="input mb-2 show-errors input-light">
 
+        <label class="mb-2" for="team-department">Department</label>
+        <input type="text" name="team-department" formControlName="department"
+          class="input mb-2 show-errors input-light">
+
         <div class="mt-3">
           <app-main-error-alert [errors]="errors"></app-main-error-alert>
           <app-main-success-alert [successes]="successes"></app-main-success-alert>
